...
            "state" : "translated",
            "value" : "把这个版本的字幕加入时间线，随时可以转写"
          }
        }
      }
    },
    "Add Captions to Timeline" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "将字幕添加到时间线"
          }
...
            "state" : "translated",
            "value" : "字幕文字将与您撰写的内容完全一致。"
          }
        }
      }
    },
    "Caption Track" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "字幕轨道"
...
            "state" : "translated",
            "value" : "创建项目，准备其内容和预览，然后将其发布到市场。"
          }
        }
      }
    },
    "Create Captions" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "创建字幕"
          }
...
            "state" : "translated",
            "value" : "不重排过长字幕"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "完成"
          }
...
            "state" : "translated",
            "value" : "草稿"
          }
        }
      }
    },
    "Draft saved" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "草稿已保存"
          }
...
            "state" : "translated",
            "value" : "将素材保存在共享素材库中，并将已安装的媒体添加到任意影片。"
          }
        }
      }
    },
    "Keep Editing" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "继续编辑"
          }
...
            "state" : "translated",
            "value" : "MapKit 地图已可在 Remotion 合成中使用。"
          }
        }
      }
    },
    "Marketplace" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "市场"
          }
...
            "state" : "translated",
            "value" : "网络"
          }
        }
      }
    },
    "New" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新建"
          }
...
            "state" : "translated",
            "value" : "勉强地"
          }
        }
      }
    },
    "Remotion" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remotion"
          }
...
            "state" : "translated",
            "value" : "同时保存字幕文件"
          }
        }
      }
    },
    "Save Draft" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存草稿"
          }
...
